--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,14 @@
-name: "Doohicky"
-description: "a site about nothing"
-signature: "Yours truly, Grizzly Bear"
+name: "Activate Hub"
+description: "put the description here"
+signature: "a signature line which probably doesn't make sense for this site"
 pygments: true
 permalink: pretty
 markdown: redcarpet
 github:
   # enables "edit" link
-  repo: 'GRIZZLYBEAR/GRIZZLYBEAR.github.io'
+  repo: 'activate/activate.github.io'
   branch: master
 prose:
-  siteurl: 'http://GRIZZLYBEAR.github.io'
-  relativeLinks: 'http://GRIZZLYBEAR.github.io/links.jsonp'
+  siteurl: 'http://activate.github.io'
+  relativeLinks: 'http://activate.github.io/links.jsonp'
   media: 'media'
